--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -6,7 +6,7 @@
     padding-top: 64px;
     padding-bottom: 100px;
     
-    .conteiner {
+    .container {
         position: relative;
     }
 
@@ -15,10 +15,10 @@
         top: 0;
         left: 0;
         width: 100%;
-        left: 100%;
+        height: 100%;
         background-color: #000;
         opacity: .7;
-        content: ' ';
+        content: '';
     }
 
     &__text {
