--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .hero {
     position: relative;
     background-image: url(../images/fundo.png);
@@ -16,7 +18,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: variables.$heroBeforeColor;
         opacity: .7;
         content: '';
     }
